trunk/Archive2/36/529ecc38a7186c/output
main.cpp:1:1: error: expected unqualified-id before numeric constant
 476         // memory
 ^
